# beck

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  HANDOFF.md  LICENSE-MIT  README.md  STATUS.md  TODOS.md
.github/workflows/: ci.yml  release.yml
assets/: asciiart.text.webarchive  demo.txt  hero.html  og.html
crates/beck-core/: Cargo.toml
crates/beck-core/src/: db.rs  frontmatter.rs  lib.rs
docs/agents/: claude-code.md
marketing/: brand-voice.md  landing-copy.md  seo-meta.json  show-hn-draft.md  social-posts.md
scripts/: claude-tokens.sh  demo.sh  install.sh  test-mcp.sh
src/: banner.rs  consts.rs  db.rs  error.rs  lib.rs  main.rs  paths.rs  query.rs  sync.rs
src/agents/: adapter.rs  claude_code.rs  manifest.rs  mod.rs  paths.rs  registry.rs  skill.rs
src/commands/: bench.rs  bootstrap.rs  check.rs  link.rs  list.rs  load.rs  mcp.rs  mod.rs  prompt.rs  query.rs  sync.rs  unlink.rs
src/mcp/: mod.rs  tools.rs
tests/: bootstrap_integration.rs  check_integration.rs  claude_code_integration.rs  ingest_claude_integration.rs  link_integration.rs  round_trip_integration.rs
tests/eval/: queries.toml
tests/fixtures/skills/a0-plugin-to-repo/: SKILL.md
tests/fixtures/skills/a0-tool-and-extension-wiring/: SKILL.md
tests/fixtures/skills/automated-content-research-pipeline/: SKILL.md
tests/fixtures/skills/carabiner-os-troubleshooting/: SKILL.md
tests/fixtures/skills/carabineros-start-local-stack/: SKILL.md
tests/fixtures/skills/content-pipeline-execution/: SKILL.md
tests/fixtures/skills/content-producer-brief/: SKILL.md
tests/fixtures/skills/content-research-pipeline/: SKILL.md
tests/fixtures/skills/ctl-check-the-logs/: SKILL.md
tests/fixtures/skills/docker-compose-troubleshooting/: SKILL.md
tests/fixtures/skills/docker-network-access-setup/: SKILL.md
tests/fixtures/skills/documentation-analysis-and-organization/: SKILL.md
tests/fixtures/skills/git-tree-cleanup/: SKILL.md
tests/fixtures/skills/github-flagged-account-recovery/: SKILL.md
tests/fixtures/skills/github-pr-security-review/: SKILL.md
tests/fixtures/skills/github-pr-workflow/: SKILL.md
tests/fixtures/skills/gstack-workflows/: SKILL.md
tests/fixtures/skills/hermes-agent/: SKILL.md
tests/fixtures/skills/hermes-gateway-troubleshooting/: SKILL.md
(+21 files in other folders)
