[package]
name = "beck"
version = "0.2.2"
edition = "2024"
rust-version = "1.85"
description = "Local skills router CLI for AI agents. Your agent's skills, at its beck and call."
license = "MIT OR Apache-2.0"
repository = "https://github.com/notabotchef/beck"
readme = "README.md"
keywords = ["cli", "mcp", "ai", "agent", "skills"]
categories = ["command-line-utilities"]

[[bin]]
name = "beck"
path = "src/main.rs"

[[bin]]
name = "eval"
path = "src/bin/eval.rs"
required-features = ["eval"]

[dependencies]
anyhow = "1"
clap = { version = "4.6", features = ["derive", "string"] }
dirs = "6"
rmcp = { version = "=1.3.0", features = ["server"] }
# Pin rmcp-macros to match rmcp 1.3.0. rmcp 1.3.0 declares a loose
# rmcp-macros version range, and macros 1.4+ ships a breaking change
# (tool_router becomes private), so cargo install without --locked
# resolved rmcp-macros 1.5.0 and broke the build. See 0.2.1 incident.
rmcp-macros = "=1.3.0"
rusqlite = { version = "0.39", features = ["bundled"] }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1.50", features = ["full"] }
toml = { version = "0.8", optional = true }
walkdir = "2"

[features]
default = []
eval = ["dep:toml"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# cargo-dist convention carried from mateonunez/nucleo; used locally if we
# later adopt cargo-dist for release tarballs. CI release.yml builds with
# plain `cargo build --release` for now.
[profile.dist]
inherits = "release"
lto = "thin"
