[package]
name = "beck-core"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for beck, the local skills router CLI for AI agents."

[dependencies]
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2"
anyhow = "1"
thiserror = "2"
toml = { version = "0.8", optional = true }

[features]
eval = ["dep:toml"]

[[bin]]
name = "eval"
path = "src/bin/eval.rs"
required-features = ["eval"]
